# obsidian-excalidraw-share

./: .gitignore  AGENTS.md  DEPLOYMENT.md  README.md  excalidraw-share.service  excalishare.service  flake.nix  start.sh  todo.md
backend/: Cargo.toml
backend/src/: auth.rs  collab.rs  error.rs  main.rs  password.rs  routes.rs  storage.rs  ws.rs
backend/test-data/drawings/: acc278aa.json
frontend/: flake.nix  index.html  package-lock.json  package.json  patch-excalidraw.sh  vite.config.ts
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
nixos/: default.nix  module.nix
obsidian-plugin/: collabClient.ts  collabManager.ts  collabTypes.ts  esbuild.config.mjs  excalidrawScripts.ts  main.js  main.ts  manifest.json  package-lock.json  package.json  pdfUtils.js  pdfUtils.ts  screenShare.ts  settings.ts  styles.ts  toolbar.ts  tsconfig.json
obsidian-script/: Share Drawing.md
plans/: adaptive-stroke-improvements.md  collab-bugfixes.md  collab-cursors-and-follow.md  collab-delta-updates.md  collab-drawing-interruption-and-follow.md  collab-event-driven-optimization.md  collab-file-sync.md  collab-state-sync.md  deep-analysis.md  disconnect-offline-handling.md  embedded-excalidraw-scripts.md  excalidraw-upgrade-0.18.md  external-file-change-detection-setting.md  font-embedding.md  live-collaboration.md  livesync-collab-conflict.md  mobile-responsive-redesign.md  monetization-and-release.md  nixos-coturn-setup.md  obsidian-collab-follow-bugs.md  obsidian-host-cursor-bug.md  obsidian-native-collab.md  password-protection.md  persistent-collab.md  (+6 more)
(+25 files in other folders)
