[package]
name = "excalidraw-share"
version = "0.1.0"
edition = "2021"
description = "Self-hosted Excalidraw drawing sharing server"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tower-http = { version = "0.6", features = ["cors", "fs", "compression-gzip", "trace", "limit"] }
tower = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
